2011-05-31  Ivan Maidanski  <ivmai@mail.ru>

	* win32_threads.c (GC_unregister_my_thread): Use KNOWN_FINISHED()
	instead of FINISHED macro.
	* tests/test.c (check_heap_stats): Round up max_heap_sz value for
	Win32 (same as for USE_MMAP).

2011-05-31  Ivan Maidanski  <ivmai@mail.ru>

	* tests/test.c (check_heap_stats): Adjust printf format specifier
	for max_heap_sz; cast max_heap_sz accordingly.

2011-05-30  Ivan Maidanski  <ivmai@mail.ru>

	* doc/README.solaris2: Add note.

2011-05-30  Ivan Maidanski  <ivmai@mail.ru>

	* configure.ac (SOLARIS25_PROC_VDB_BUG_FIXED): Don't define for
	Solaris/x86 2.10+.
	* configure: Regenerate.

2011-05-23  Ivan Maidanski  <ivmai@mail.ru>

	* tests/threadkey_test.c (SKIP_THREADKEY_TEST): Skip the test if
	defined; explicitly define for some targets.

2011-05-23  Ivan Maidanski  <ivmai@mail.ru>

	* mark.c (GC_dirty): Add prototype (only if MANUAL_VDB).
	* stubborn.c (GC_dirty): Ditto.
	* include/private/gcconfig.h (GWW_VDB, MPROTECT_VDB, PCR_VDB,
	PROC_VDB): Undefine if MANUAL_VDB.
	* include/private/gcconfig.h (DEFAULT_VDB): Don't define if
	MANUAL_VDB.
	* os_dep.c (async_set_pht_entry_from_index): Define for
	MANUAL_VDB.
	* os_dep.c (GC_read_dirty): Set GC_dirty_maintained only if
	success; if ioctl() failed then just print warning instead of
	aborting.

2011-05-23  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gc_priv.h (GC_ASSERT): Use "%d" (instead of %ld)
	for line number printing.

2011-05-23  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_read_dirty): Add debug logging if DEBUG_DIRTY_BITS
	(for PROC_VDB only); print errors via GC_err_printf; rename "ps"
	and "np" local variables to npages and pagesize, respectively;
	remove "current_addr" local variable.
	* os_dep.c: Reformat comments.

2011-05-22  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_get_main_stack_base): Convert to GC_get_stack_base
	for BeOS and OS/2; define HAVE_GET_STACK_BASE.
	* os_dep.c (GET_MAIN_STACKBASE_SPECIAL): Define when a specific